@@ -45,7 +45,9 @@ int main (int argc, char **argv)
   printf ("#define ptr2word(PTR_) ((STACKWORD) (PTR_))\n");	
   printf ("#define word2ptr(WRD_) ((void *) (WRD_))\n");
   printf ("#define get_sys_time() get_sys_time_impl()\n");
-  printf ("#define LITTLE_ENDIAN %d\n", determine_little_endian());	
+  printf ("#ifndef LITTLE_ENDIAN\n");
+  printf ("#define LITTLE_ENDIAN %d\n", determine_little_endian());
+  printf ("#endif\n");	
   printf ("#define FP_ARITHMETIC 1\n");	
   printf ("#define PLATFORM_HANDLES_SWITCH_THREAD 0\n");
   printf ("#define OPCODES_PER_TIME_SLICE 148\n");
