@@ -57,7 +57,7 @@
 ----------------- Run of Test13.tvm
 & ROM call 3: 0x1FF2 (12319, 0, 12290)
 & ROM call 0: 0x27C8
-& ROM call 3: 0x1FF2 (12319, 3929, 12290)
+& ROM call 3: 0x1FF2 (12319, 3930, 12290)
 & ROM call 0: 0x27C8
 & ROM call 3: 0x1FF2 (12311, 5, 0)
 & ROM call 0: 0x27C8
